--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
+{
+  "name": "@h21-map/baidu-zoom-box",
+  "scope":"@h21-map",
+  "version": "1.0.1",
+  "description": "A library of Baidu Map JS API",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/novakand/h21-map-baidu-zoom-box"
+  },
+  "keywords": [
+    "baidu",
+    "baidu-map",
+    "zoom-box",
+    "angular"
+  ],
+  "author": "",
+  "license": ""
+}
 
